HTML5 Docker CSS Reset追加

--- a/01default/style.css
+++ b/01default/style.css
@@ -2,7 +2,7 @@
 
 *, *:before, *:after {
   -webkit-box-sizing: border-box;
-  box-sizing: border-box
+  box-sizing: border-box;
 }
 /* css main が　ieの場合inlineになるためdisplay block指定  */
 main {
