--- a/02default-scss/style.scss
+++ b/02default-scss/style.scss
@@ -1,7 +1,13 @@
-p {
-    font-size: 18px;
-}
+/* block内にborderとpaddingを含めてレスポンシブレイアウト対応にする */
 
+*, *:before, *:after {
+  box-sizing: border-box;
+}
+/* css main が　ieの場合inlineになるためdisplay block指定  */
 main {
     display: block;
+}
+
+p {
+    font-size: 18px;
 }
