--- a/02default-scss/style.scss
+++ b/02default-scss/style.scss
@@ -1,3 +1,6 @@
+body {
+  font-family: "Hiragino Kaku Gothic ProN", "ヒラギノ角ゴ ProN W3", "メイリオ", Meiryo, "ＭＳ Ｐゴシック", "MS PGothic", sans-serif;
+}
 /* block内にborderとpaddingを含めてレスポンシブレイアウト対応にする */
 
 *, *:before, *:after {
@@ -7,6 +10,7 @@
 main {
     display: block;
 }
+
 
 p {
     font-size: 18px;
