--- a/03reset比較/03-05normalize.css/style.css
+++ b/03reset比較/03-05normalize.css/style.css
@@ -22,6 +22,8 @@ html {
 
 body {
   margin: 0;
+  font-family: "Hiragino Kaku Gothic ProN", "ヒラギノ角ゴ ProN W3", "メイリオ", Meiryo, "ＭＳ Ｐゴシック", "MS PGothic", sans-serif;
+
 }
 
 /**
