--- a/03reset比較/03-03EricMayerResetCss/style.css
+++ b/03reset比較/03-03EricMayerResetCss/style.css
@@ -30,6 +30,8 @@ footer, header, hgroup, menu, nav, section {
 }
 body {
     line-height: 1;
+    font-family: "Hiragino Kaku Gothic ProN", "ヒラギノ角ゴ ProN W3", "メイリオ", Meiryo, "ＭＳ Ｐゴシック", "MS PGothic", sans-serif;
+
 }
 ol, ul {
     list-style: none;
