--- a/03reset比較/03-04HTML5DoctorCssReset/style.css
+++ b/03reset比較/03-04HTML5DoctorCssReset/style.css
@@ -29,6 +29,8 @@ time, mark, audio, video {
 
 body {
     line-height:1;
+    font-family: "Hiragino Kaku Gothic ProN", "ヒラギノ角ゴ ProN W3", "メイリオ", Meiryo, "ＭＳ Ｐゴシック", "MS PGothic", sans-serif;
+
 }
 
 article,aside,details,figcaption,figure,
