--- a/03reset比較/03-06ress/style.css
+++ b/03reset比較/03-06ress/style.css
@@ -34,6 +34,11 @@ html {
   margin: 0;
 }
 
+body {
+    font-family: "Hiragino Kaku Gothic ProN", "ヒラギノ角ゴ ProN W3", "メイリオ", Meiryo, "ＭＳ Ｐゴシック", "MS PGothic", sans-serif;
+
+}
+
 /* # =================================================================
    # General elements
    # ================================================================= */
